test/tests/compiler/18_structures/invalid_types/extra_credit/union_initializers/scalar_union_initializer.plx
#  You can't initialize a union with a scalar value 
type union u(a: i32)

pub fn main(none) i32 {
    my_union: union u = true
    return 0
}
